# dust3r

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
docker/: README.adoc  demo.sh  docker-compose-cpu.yml  docker-compose-cuda.yml  run.sh  shell.sh  tensorboard.sh  train.sh
docker/files/: cpu.Dockerfile  cuda.Dockerfile  tensorboard_entrypoint.sh  train_entrypoint.sh
dust3r/: demo.py
